[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

[lib]

[features]
default = []
profiler= ["cpuprofiler"]

[dependencies]
argh= "0.1.3"
cpuprofiler = {version= "0.0.4", optional=true}
nom = "6.0.1"
recap = "0.1.1"
serde = "1.0.130"
nalgebra = "0.29.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "day6"
harness = false
